--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,11 @@
         android:id="@+id/scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/welcome_message"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="-14dp"
-        android:layout_marginEnd="19dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/custom_button"
         android:onClick="startScan"
         android:text="@string/button_scan" />
@@ -39,9 +40,10 @@
         android:layout_below="@id/scan_button"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-4dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="3dp"
         android:background="@drawable/list_view_background"
         android:drawSelectorOnTop="false" />
 
