--- a/app/src/main/res/layout/activity_sensors_info.xml
+++ b/app/src/main/res/layout/activity_sensors_info.xml
@@ -33,31 +33,46 @@
 
     <TextView
         android:id="@+id/address_textView"
-        android:layout_width="89dp"
+        android:layout_width="182dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="81dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
+        android:maxLines="1"
         android:textColor="@color/text" />
 
     <TextView
         android:id="@+id/name_textView"
-        android:layout_width="89dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="580dp"
+        android:maxLines="1"
         android:textColor="@color/text" />
 
     <TextView
-        android:id="@+id/temp_textView"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="202dp" />
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="173dp"
+        android:text="@string/textView_SI"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/temp_textView"
+        android:layout_width="133dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="179dp"
+        android:layout_marginTop="181dp"
+        android:maxLines="5" />
 
 </RelativeLayout>
