--- a/app/src/main/res/drawable/device_info_box.xml
+++ b/app/src/main/res/drawable/device_info_box.xml
@@ -3,8 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_square"/>
-            <stroke android:width="3dp" android:color="@color/text_listView"/>
+            <solid android:color="@color/background_info_box"/>
+            <stroke android:width="3dp" android:color="@color/primary_text"/>
             <corners android:radius="13dp"/>
         </shape>
 
