--- a/app/src/main/res/layout/activity_sensors_info.xml
+++ b/app/src/main/res/layout/activity_sensors_info.xml
@@ -1,35 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background_gradient">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="239dp"
-        android:layout_marginTop="23dp"
-        android:background="@drawable/custom_button"
-        android:onClick="connectToGatt"
-        android:text="@string/button_connect_gatt" />
-
-    <Button
-        android:id="@+id/button_disconnect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/custom_button"
-        android:onClick="disconnectFromGatt"
-        android:text="@string/disconnect_gatt" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_sensors"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        app:title="My Sensors"/>
 
     <RelativeLayout
         android:id="@+id/info_square"
@@ -101,7 +85,7 @@
             android:layout_marginStart="9dp"
             android:layout_marginTop="12dp"
             android:text="@string/textView_SI"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/secondary_text"
             android:textSize="16sp" />
 
         <TextView
@@ -110,10 +94,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="98dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="102dp"
+            android:layout_marginTop="14dp"
             android:maxLines="5"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/secondary_text"
             android:textSize="13sp" />
 
     </RelativeLayout>
@@ -146,4 +130,4 @@
         android:maxLines="5" />
 
 
-</RelativeLayout>
+</LinearLayout>
