--- a/app/src/main/res/layout/activity_sensors_info.xml
+++ b/app/src/main/res/layout/activity_sensors_info.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -13,121 +13,220 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/AppTheme.PopupOverlay"
-        app:title="My Sensors"/>
+        app:title="AndroShirt" />
 
     <RelativeLayout
-        android:id="@+id/info_square"
-        android:layout_width="190dp"
-        android:layout_height="98dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/device_info_box">
+        android:id="@+id/relative_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp">
+
+        <TextView
+            android:id="@+id/header_device_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:background="@drawable/header_sensor_info"
+            android:gravity="center"
+            android:text="@string/textView_device_info"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/bleAdvertiserInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header_device_info"
+            android:layout_marginStart="10sp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/box_sensor_info"
+            android:drawableStart="@drawable/signal"
+            android:drawablePadding="30dp"
+            android:padding="30dp"
+            android:text="@string/textView_device_infos"
+            android:textColor="@color/primary_text" />
 
         <TextView
             android:id="@+id/address_textView"
-            android:layout_width="182dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignStart="@id/bleAdvertiserInfo"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="42dp"
-            android:maxLines="1"
-            android:textAlignment="center"
-            android:textColor="@color/primary_text" />
-
-        <TextView
-            android:id="@+id/connection_state_textView"
-            android:layout_width="133dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="29dp"
-            android:layout_marginTop="63dp"
-            android:layout_marginEnd="28dp"
-            android:maxLines="5"
-            android:textAlignment="center"
-            android:textColor="@color/primary_text" />
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginEnd="10dp" />
 
         <TextView
             android:id="@+id/name_textView"
-            android:layout_width="131dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignStart="@id/bleAdvertiserInfo"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="18dp"
-            android:maxLines="1"
-            android:textAlignment="center"
-            android:textColor="@color/primary_text" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="359dp"
-        android:layout_height="110dp"
-        android:layout_below="@id/info_square"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="1dp"
-        android:background="@color/logger">
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="88dp"
+            android:layout_marginEnd="10dp" />
 
         <TextView
-            android:id="@+id/terminal_string"
-            android:layout_width="119dp"
+            android:id="@+id/connection_state_textView"
+            android:layout_width="94dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignStart="@id/bleAdvertiserInfo"
+            android:layout_alignBottom="@id/bleAdvertiserInfo"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/textView_SI"
-            android:textColor="@color/secondary_text"
-            android:textSize="16sp" />
+            android:layout_marginStart="244dp"
+            android:layout_marginTop="111dp"
+            android:layout_marginBottom="7dp" />
 
-        <TextView
-            android:id="@+id/terminal_textView"
-            android:layout_width="250dp"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="102dp"
-            android:layout_marginTop="14dp"
-            android:maxLines="5"
-            android:textColor="@color/secondary_text"
-            android:textSize="13sp" />
+            android:layout_below="@id/connection_state_textView"
+            android:layout_marginTop="30dp">
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!--Temperature-->
+                <TextView
+                    android:id="@+id/textView_header__temp"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginEnd="10sp"
+                    android:background="@drawable/header_sensor_info"
+                    android:gravity="center"
+                    android:text="Temperature"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <!--HeartBeat-->
+
+                <TextView
+                    android:id="@+id/textView_temp"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_below="@id/textView_header__temp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="190dp"
+                    android:background="@drawable/box_sensor_info"
+                    android:drawableTop="@drawable/temperature"
+                    android:drawablePadding="20dp"
+                    android:padding="30dp"
+                    android:gravity="center"
+                    android:text="asdasd"
+                    android:textColor="@color/primary_text" />
+
+                <TextView
+                    android:id="@+id/textView_header_heart"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="190sp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="10sp"
+                    android:background="@drawable/header_sensor_info"
+                    android:gravity="center"
+                    android:text="HeartBeat"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textView_heart"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_below="@id/textView_header_heart"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="190sp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/box_sensor_info"
+                    android:padding="30dp"
+                    android:drawableTop="@drawable/heartbeat"
+                    android:drawablePadding="20sp"
+                    android:gravity="center"
+                    android:text="asdasd"
+                    android:textColor="@color/primary_text" />
+
+                <!--Brightness-->
+
+                <TextView
+                    android:id="@+id/textView_brightness"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textView_temp"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginEnd="10sp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/header_sensor_info"
+                    android:gravity="center"
+                    android:text="Brightness"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textView_header_brightness"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_below="@id/textView_brightness"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="191dp"
+                    android:background="@drawable/box_sensor_info"
+                    android:padding="30dp"
+                    android:drawableTop="@drawable/brightness"
+                    android:drawablePadding="20dp"
+                    android:gravity="center"
+                    android:text="asdasd"
+                    android:textColor="@color/primary_text" />
+
+                <!--Position-->
+
+                <TextView
+                    android:id="@+id/textView_acceleration"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textView_heart"
+                    android:layout_marginStart="190sp"
+                    android:layout_marginEnd="10sp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/header_sensor_info"
+                    android:gravity="center"
+                    android:text="Position"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textView_header_acceleration"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="190sp"
+                    android:layout_marginEnd="11dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/box_sensor_info"
+                    android:padding="30dp"
+                    android:drawableTop="@drawable/gps"
+                    android:drawablePadding="20sp"
+                    android:gravity="center"
+                    android:text="asdasdsad"
+                    android:textColor="@color/primary_text" />
+
+            </RelativeLayout>
 
 
-    <TextView
-        android:id="@+id/temp_string"
-        android:layout_width="121dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="238dp"
-        android:layout_marginTop="618dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="3dp"
-        android:text="@string/textview_temp_value" />
+    </ScrollView>
 
-    <TextView
-        android:id="@+id/temp_textView"
-        android:layout_width="133dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="227dp"
-        android:layout_marginTop="583dp"
-        android:layout_marginEnd="0dp"
-        android:maxLines="5" />
+
+
+</RelativeLayout>
+
 
 
 </LinearLayout>
