--- a/app/src/main/res/drawable/header_sensor_info.xml
+++ b/app/src/main/res/drawable/header_sensor_info.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorAccent"/>
             <stroke android:color="@color/colorAccent"/>
         </shape>
 
