--- a/app/src/main/res/menu/toolbar_menu_sensors.xml
+++ b/app/src/main/res/menu/toolbar_menu_sensors.xml
@@ -13,8 +13,12 @@
         app:showAsAction="always"
         android:visible="false"/>
 
-    <item android:id="@+id/action_about"
-        android:title="@string/toolbar_main_about"
+    <item android:id="@+id/action_graph_rssi"
+        android:title="@string/toolbar_sensors_rssi"
+        app:showAsAction="never"/>
+
+    <item android:id="@+id/action_mqtt"
+        android:title="@string/toolbar_sensors_mqtt"
         app:showAsAction="never"/>
 
 </menu>
