--- a/app/src/main/res/menu/toolbar_menu_sensors.xml
+++ b/app/src/main/res/menu/toolbar_menu_sensors.xml
@@ -19,6 +19,7 @@
 
     <item android:id="@+id/action_mqtt"
         android:title="@string/toolbar_sensors_mqtt"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:enabled="false"/>
 
 </menu>
