--- a/app/src/main/res/layout/activity_graph_rssi.xml
+++ b/app/src/main/res/layout/activity_graph_rssi.xml
@@ -18,8 +18,9 @@
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
